fixed icons and light / dark mode

--- a/styles.css
+++ b/styles.css
@@ -94,14 +94,14 @@ h4 {
   align-items: center;
   gap: 0.7rem;
   cursor: pointer;
-  color: #fff;
+  color: var(--white);
   text-transform: uppercase;
+  font-size: 1.2rem;
 }
 
-/* #toggle-btn h3 {
-  margin-right: 1rem;
-  text-transform: uppercase;
-} */
+#toggle-btn.light {
+  color: var(--secondary-lg-300);
+}
 
 .form {
   position: relative;
@@ -146,10 +146,9 @@ h4 {
   color: var(--white);
   font-family: inherit;
   cursor: pointer;
-  /* font-weight: bold; */
   font-size: 1rem;
   border-radius: 0.75rem;
-  left: 18.5rem;
+  right: 0.3rem;
   top: 50%;
   transform: translateY(-50%);
 }
@@ -160,13 +159,13 @@ h4 {
   }
   .btn-search {
     padding: 1rem 1.7rem;
-    left: 30rem;
+    right: 0.5rem;
   }
 }
 
 @media screen and (min-width: 1440px) {
   .btn-search {
-    left: 42.5rem;
+    /* right: 0.7rem; */
     padding: 1.2rem 1.77rem;
   }
 }
@@ -269,8 +268,8 @@ h4 {
   margin-bottom: 1rem;
 }
 
-.icon {
-  fill: black;
+.list-info .icon {
+  font-size: 1.2rem;
 }
 
 @media screen and (min-width: 768px) {
